--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
-  <body style="font-size: 12px">
+  <body style="font-size: 15px; line-height: 20px; font-family: Mulish, sans-serif;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
